--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,111 @@ Green: #00B172
 White: #FFF
 
 */
+
+nav {
+    background-color: #fff;
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 0;
+
+}
+
+.navbar-logo {
+    height: 45px;        
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;         
+    justify-content: flex-end;
+}
+
+nav a {
+    display: block;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
+    color: #1A1A1A;
+}
+
+
+.hero {
+    display: flex;     
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    position: relative;
+    height: 500px;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+h1, h2 { 
+    text-align: center;
+    color: #fff;
+}
+
+h2 {
+    font-size: 18px;
+}
+
+
+.whitebg {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #fff;
+    text-align: center;
+    padding: 1rem;
+}
+
+.whitebg img {
+    max-width: 100px;
+    margin-bottom: 1rem;
+}
+
+.whitebg h4 {
+    width: 100%;
+    margin-bottom: 2rem;
+    color: #000;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    margin: 0 1rem;
+}
+
+.yeezy-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1DB954;
+    padding: 2rem 5%;
+    color: #fff;
+}
+
+.text-content {
+    width: 50%;
+}
+
+.image-content {
+    width: 50%; 
+    position: relative;
+}
+
+.image-content img {
+    width: 25%;
+}
