--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1DB954;
+    background-color: #00B172;
     padding: 2rem 5%;
     color: #fff;
 }
