--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,8 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 1% 0;
+    width: 100%;
+    position: fixed;
 
 }
 
